# Ray-Tracer

./: .gitignore  .sconsign.dblite  01.txt  02.txt  03.txt  04.txt  05.txt  10.txt  11.txt  13.txt  14.txt  18.txt  21.txt  22.txt  24.txt  28.txt  29.txt  CMakeLists.txt  LICENSE  README.md  box.cpp  camera.h  grading-scheme.txt  grading-script.py  hierarchy.h  mesh.cpp  misc.h  phong_shader.cpp  phong_shader.h  plane.cpp  ray_tracer  render_world.cpp  render_world.h  shader.h  sphere.cpp  sphere.h
grading/: .sconsign.dblite  SConstruct  bounding_box.h  box.h  camera.cpp  direction_light.h  dump_png.cpp  flat_shader.cpp  flat_shader.h  hierarchy.cpp  main.cpp  mesh.cpp  mesh.h  object.h  parse.cpp  phong_shader.cpp  plane.h  ray.h  ray_tracer  reflective_shader.cpp  reflective_shader.h  render_world.cpp  sphere.cpp  sphere.h  spot_light.h
tests/: 00.txt  06.txt  07.txt  08.txt  09.txt  12.txt  15.txt  16.txt  17.txt  19.txt  20.txt  23.txt  25.txt  26.txt  27.txt
